# common_msgs

./: CMakeLists.txt
include/: ROSUnit_FloatSub.hpp  ROSUnit_HeadingPub.hpp  ROSUnit_HeadingSub.hpp  ROSUnit_Point2DPub.hpp  ROSUnit_Point2DSub.hpp  ROSUnit_PointSub.hpp  ROSUnit_PositionPub.hpp  ROSUnit_PositionSub.hpp  ROSUnit_VelocityPub.hpp  ROSUnit_VelocitySub.hpp  common_types.hpp
msg/: attitude.msg
src/: ROSUnit_FloatSub.cpp  ROSUnit_HeadingPub.cpp  ROSUnit_HeadingSub.cpp  ROSUnit_Point2DPub.cpp  ROSUnit_Point2DSub.cpp  ROSUnit_PointSub.cpp  ROSUnit_PositionPub.cpp  ROSUnit_PositionSub.cpp  ROSUnit_VelocityPub.cpp  main.cpp
